data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_414.wast
;; 5. **Test Description 5:**    - A loop with a `br_if` instruction that mismatches operand types for the loop’s input type, leading the loop to re-enter indefinitely.    - **Constraint: Operand Stack Management**    - **Relation to Infinite Loop:** Incorrect operand handling fails to properly exit loop.

(assert_invalid
  (module
    (func $test-loop-mismatch
      (loop (br_if 0 (i64.const 1)))
    )
  )
  "type mismatch"
)